OCHAROCCA * Added Ukraine * Removed Faciilities * made fields for Lat?lon Soruce/Date visible * Fixed Representation of GIS Levels * Styling of Buttons * Allows mulitple Column headers in event_event.xsl for Name/Reference and demographic_data.xsl for Date/Year

--- a/static/themes/OCHAROCCA/style.css
+++ b/static/themes/OCHAROCCA/style.css
@@ -105,6 +105,10 @@ a {
     color: #444444;
 }
 
+h2 {
+    float: left;
+}
+
 h3 {
     margin: 0;
     padding:0;
@@ -133,8 +137,6 @@ h3 {
     padding: 5px 2px;
 }
 
-
-
 .thumbnail {
     background: url('../../img/semi_white_75.png') !important;
 /*
@@ -156,7 +158,7 @@ h3 {
     float: left
 }
 */
-#list-btn-add {
+.summary-import {
     margin: 15px 0 0 15px;
 }
 
@@ -203,7 +205,7 @@ h3 {
 }
 
 .country {
-    width: 9%;
+    width: 7.6%;
     margin: 0 1.25%;
     padding: 10px 0.5% 5px;
     background: #66B2FF;
@@ -223,6 +225,9 @@ h3 {
     height: 20px;
 }
 
+.country.tm h3 {
+    font-size: 15px;
+}
 /*
 .link  h3:hover,
 .country:hover,
